--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   toast: ^0.1.5
   url_launcher: ^5.4.11
   simple_tooltip: ^0.1.13
+  google_sign_in: ^4.5.1
+  firebase_auth: ^0.16.1
 
 
   # The following adds the Cupertino Icons font to your application.
